--- a/MlemMlem/MlemMlem/ViewController/SignUpViewController/ConfirmView/ConfirmSignUpViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/SignUpViewController/ConfirmView/ConfirmSignUpViewController.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -17,15 +18,13 @@
         <array key="Inter-Regular.ttf">
             <string>Inter-Regular</string>
         </array>
-        <array key="Inter-SemiBold.ttf">
-            <string>Inter-SemiBold</string>
-        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ConfirmSignUpViewController" customModule="MlemMlem" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view_Components" destination="OFg-Iq-zjA" id="woO-fg-lI9"/>
+                <outlet property="view_background" destination="mIK-5c-y6M" id="SP1-b1-Zhc"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -33,39 +32,15 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mIK-5c-y6M" customClass="BackgroundView" customModule="MlemMlem" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BMb-KK-Dn7">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="100" width="414" height="796"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_bacjground" translatesAutoresizingMaskIntoConstraints="NO" id="Lel-ob-uLj">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9FW-lQ-yTX">
-                            <rect key="frame" x="25" y="43.5" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="30" id="Bkt-nY-y76"/>
-                                <constraint firstAttribute="height" constant="30" id="MLX-aI-x01"/>
-                            </constraints>
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <state key="normal" image="chevron.backward" catalog="system"/>
-                            <connections>
-                                <action selector="onDismis:" destination="-1" eventType="touchUpInside" id="eiZ-NS-ras"/>
-                            </connections>
-                        </button>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_groundElements" translatesAutoresizingMaskIntoConstraints="NO" id="bCY-Pt-5lD">
-                            <rect key="frame" x="-60" y="0.0" width="474" height="200"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="200" id="84T-97-NDS"/>
-                            </constraints>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mã xác nhận" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udR-5v-xQd">
-                            <rect key="frame" x="164.5" y="50" width="85.5" height="17"/>
-                            <fontDescription key="fontDescription" name="Inter-SemiBold" family="Inter" pointSize="14"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OFg-Iq-zjA">
-                            <rect key="frame" x="0.0" y="100" width="414" height="796"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="796"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="la2-YE-WGZ">
                                     <rect key="frame" x="25" y="688" width="364" height="50"/>
@@ -152,39 +127,32 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="udR-5v-xQd" firstAttribute="top" secondItem="BMb-KK-Dn7" secondAttribute="top" constant="50" id="2h6-ya-ZkC"/>
-                        <constraint firstAttribute="bottom" secondItem="Lel-ob-uLj" secondAttribute="bottom" id="7G4-S2-wfc"/>
-                        <constraint firstItem="bCY-Pt-5lD" firstAttribute="top" secondItem="BMb-KK-Dn7" secondAttribute="top" id="7cb-Am-88q"/>
-                        <constraint firstItem="9FW-lQ-yTX" firstAttribute="centerY" secondItem="udR-5v-xQd" secondAttribute="centerY" id="Apg-XH-LyL"/>
-                        <constraint firstItem="OFg-Iq-zjA" firstAttribute="top" secondItem="BMb-KK-Dn7" secondAttribute="top" constant="100" id="EVO-tY-4h2"/>
+                        <constraint firstItem="OFg-Iq-zjA" firstAttribute="top" secondItem="BMb-KK-Dn7" secondAttribute="top" id="EVO-tY-4h2"/>
                         <constraint firstAttribute="trailing" secondItem="OFg-Iq-zjA" secondAttribute="trailing" id="FnC-Dj-ThC"/>
-                        <constraint firstItem="Lel-ob-uLj" firstAttribute="leading" secondItem="BMb-KK-Dn7" secondAttribute="leading" id="TKD-vU-2I3"/>
                         <constraint firstItem="OFg-Iq-zjA" firstAttribute="leading" secondItem="BMb-KK-Dn7" secondAttribute="leading" id="V1a-XN-k5G"/>
-                        <constraint firstAttribute="trailing" secondItem="bCY-Pt-5lD" secondAttribute="trailing" id="biG-BR-dGn"/>
-                        <constraint firstItem="Lel-ob-uLj" firstAttribute="top" secondItem="BMb-KK-Dn7" secondAttribute="top" id="eci-eD-05O"/>
-                        <constraint firstAttribute="trailing" secondItem="Lel-ob-uLj" secondAttribute="trailing" id="f0C-59-gcY"/>
-                        <constraint firstItem="bCY-Pt-5lD" firstAttribute="leading" secondItem="BMb-KK-Dn7" secondAttribute="leading" constant="-60" id="foZ-ZU-niK"/>
-                        <constraint firstItem="9FW-lQ-yTX" firstAttribute="leading" secondItem="BMb-KK-Dn7" secondAttribute="leading" constant="25" id="qyl-Jg-jXp"/>
                         <constraint firstAttribute="bottom" secondItem="OFg-Iq-zjA" secondAttribute="bottom" id="t8T-Wv-IOr"/>
-                        <constraint firstItem="udR-5v-xQd" firstAttribute="centerX" secondItem="BMb-KK-Dn7" secondAttribute="centerX" id="tCQ-Nd-e3O"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="KlH-tW-6zV"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="bottom" secondItem="mIK-5c-y6M" secondAttribute="bottom" id="8Dd-oR-qCV"/>
                 <constraint firstAttribute="bottom" secondItem="BMb-KK-Dn7" secondAttribute="bottom" id="GUy-UO-ez9"/>
-                <constraint firstItem="BMb-KK-Dn7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="YDX-h1-rbY"/>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="trailing" secondItem="mIK-5c-y6M" secondAttribute="trailing" id="KPL-xy-63R"/>
+                <constraint firstItem="mIK-5c-y6M" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" id="PQX-SO-bca"/>
+                <constraint firstItem="BMb-KK-Dn7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="YDX-h1-rbY"/>
                 <constraint firstItem="BMb-KK-Dn7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bbM-5Q-uIQ"/>
                 <constraint firstItem="KlH-tW-6zV" firstAttribute="trailing" secondItem="BMb-KK-Dn7" secondAttribute="trailing" id="hh0-L8-caC"/>
+                <constraint firstItem="mIK-5c-y6M" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="smk-Hq-Pud"/>
             </constraints>
-            <point key="canvasLocation" x="33.5" y="54.5"/>
+            <point key="canvasLocation" x="658" y="51"/>
         </view>
     </objects>
     <resources>
-        <image name="bg_groundElements" width="375" height="215"/>
-        <image name="chevron.backward" catalog="system" width="96" height="128"/>
-        <image name="ic_bacjground" width="375" height="667"/>
         <image name="ic_waving" width="16" height="17"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
