--- a/MlemMlem/MlemMlem/ViewController/RestaurantUpdateViewController/RestaurantUpdateViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/RestaurantUpdateViewController/RestaurantUpdateViewController.xib
@@ -15,9 +15,6 @@
         <array key="Inter-Regular.ttf">
             <string>Inter-Regular</string>
         </array>
-        <array key="Inter-SemiBold.ttf">
-            <string>Inter-SemiBold</string>
-        </array>
         <array key="Roboto-Bold.ttf">
             <string>Roboto-Bold</string>
         </array>
@@ -27,6 +24,7 @@
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view_Content" destination="BqG-6Q-5gP" id="ub8-JX-0ed"/>
+                <outlet property="view_background" destination="Xe2-ba-g1O" id="Lyw-oI-upm"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,36 +32,24 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymO-vw-iOa">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xe2-ba-g1O" customClass="BackgroundView" customModule="MlemMlem" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymO-vw-iOa">
+                    <rect key="frame" x="0.0" y="100" width="414" height="762"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_bacjground" translatesAutoresizingMaskIntoConstraints="NO" id="yd3-Xf-jmh">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yd3-Xf-jmh">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="762"/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jPB-QX-MXx">
-                            <rect key="frame" x="25" y="43.5" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="AWf-T2-pxv"/>
-                                <constraint firstAttribute="width" constant="30" id="JZC-rw-42p"/>
-                            </constraints>
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <state key="normal" image="chevron.backward" catalog="system"/>
-                        </button>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_groundElements" translatesAutoresizingMaskIntoConstraints="NO" id="nc3-8v-UDe">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nc3-8v-UDe">
                             <rect key="frame" x="-60" y="0.0" width="474" height="200"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="200" id="IJa-37-0vK"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cập nhật nhà hàng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WHr-7E-x5y">
-                            <rect key="frame" x="143.5" y="50" width="127.5" height="17"/>
-                            <fontDescription key="fontDescription" name="Inter-SemiBold" family="Inter" pointSize="14"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BqG-6Q-5gP">
-                            <rect key="frame" x="0.0" y="100" width="414" height="762"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="762"/>
                             <subviews>
                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tH-gH-N29">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="670"/>
@@ -430,18 +416,14 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="BqG-6Q-5gP" firstAttribute="leading" secondItem="ymO-vw-iOa" secondAttribute="leading" id="2y5-JD-Jf5"/>
-                        <constraint firstItem="WHr-7E-x5y" firstAttribute="top" secondItem="ymO-vw-iOa" secondAttribute="top" constant="50" id="3Ss-5o-W0E"/>
                         <constraint firstAttribute="trailing" secondItem="yd3-Xf-jmh" secondAttribute="trailing" id="72s-aT-ZY1"/>
                         <constraint firstAttribute="trailing" secondItem="BqG-6Q-5gP" secondAttribute="trailing" id="9Zc-ju-OPe"/>
                         <constraint firstItem="nc3-8v-UDe" firstAttribute="leading" secondItem="ymO-vw-iOa" secondAttribute="leading" constant="-60" id="Erf-nt-jg4"/>
                         <constraint firstAttribute="trailing" secondItem="nc3-8v-UDe" secondAttribute="trailing" id="GGI-kh-00b"/>
-                        <constraint firstItem="jPB-QX-MXx" firstAttribute="leading" secondItem="ymO-vw-iOa" secondAttribute="leading" constant="25" id="M88-4q-Qee"/>
                         <constraint firstItem="nc3-8v-UDe" firstAttribute="top" secondItem="ymO-vw-iOa" secondAttribute="top" id="MLc-S9-yJk"/>
-                        <constraint firstItem="BqG-6Q-5gP" firstAttribute="top" secondItem="ymO-vw-iOa" secondAttribute="top" constant="100" id="N8H-7y-dLf"/>
+                        <constraint firstItem="BqG-6Q-5gP" firstAttribute="top" secondItem="ymO-vw-iOa" secondAttribute="top" id="N8H-7y-dLf"/>
                         <constraint firstItem="yd3-Xf-jmh" firstAttribute="leading" secondItem="ymO-vw-iOa" secondAttribute="leading" id="PEf-9c-S6Z"/>
-                        <constraint firstItem="jPB-QX-MXx" firstAttribute="centerY" secondItem="WHr-7E-x5y" secondAttribute="centerY" id="Xsl-yN-d9n"/>
                         <constraint firstAttribute="bottom" secondItem="BqG-6Q-5gP" secondAttribute="bottom" id="YUz-cW-qgT"/>
-                        <constraint firstItem="WHr-7E-x5y" firstAttribute="centerX" secondItem="ymO-vw-iOa" secondAttribute="centerX" id="iDx-lz-NmQ"/>
                         <constraint firstItem="yd3-Xf-jmh" firstAttribute="top" secondItem="ymO-vw-iOa" secondAttribute="top" id="j1h-US-lHQ"/>
                         <constraint firstAttribute="bottom" secondItem="yd3-Xf-jmh" secondAttribute="bottom" id="rXC-zC-538"/>
                     </constraints>
@@ -450,19 +432,20 @@
             <viewLayoutGuide key="safeArea" id="KlH-tW-6zV"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="trailing" secondItem="Xe2-ba-g1O" secondAttribute="trailing" id="CO9-wW-Jho"/>
                 <constraint firstItem="Omu-mN-BTs" firstAttribute="width" secondItem="KlH-tW-6zV" secondAttribute="width" id="DHx-Fl-2nw"/>
-                <constraint firstItem="ymO-vw-iOa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="E14-b9-c2c"/>
+                <constraint firstItem="ymO-vw-iOa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="E14-b9-c2c"/>
+                <constraint firstItem="Xe2-ba-g1O" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" id="E7r-IJ-SK9"/>
                 <constraint firstItem="KlH-tW-6zV" firstAttribute="bottom" secondItem="ymO-vw-iOa" secondAttribute="bottom" id="JvS-oW-Y4u"/>
+                <constraint firstItem="Xe2-ba-g1O" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="O4Q-yb-Wb2"/>
                 <constraint firstAttribute="trailing" secondItem="ymO-vw-iOa" secondAttribute="trailing" id="feo-lj-jkR"/>
                 <constraint firstItem="ymO-vw-iOa" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" id="ruV-0Z-7l7"/>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="bottom" secondItem="Xe2-ba-g1O" secondAttribute="bottom" id="weJ-qH-iaJ"/>
             </constraints>
-            <point key="canvasLocation" x="150.72463768115944" y="-69.642857142857139"/>
+            <point key="canvasLocation" x="500" y="-84"/>
         </view>
     </objects>
     <resources>
-        <image name="bg_groundElements" width="375" height="215"/>
-        <image name="chevron.backward" catalog="system" width="96" height="128"/>
-        <image name="ic_bacjground" width="375" height="667"/>
         <image name="ic_edit_black" width="38" height="38"/>
         <image name="ic_edit_orange" width="38" height="38"/>
         <image name="ic_expand" width="20" height="20"/>
