update ui and add tabbar

--- a/MlemMlem/MlemMlem/CustomView/BackgroundView/BackgroundView.xib
+++ b/MlemMlem/MlemMlem/CustomView/BackgroundView/BackgroundView.xib
@@ -43,7 +43,7 @@
                                 <action selector="backTap:" destination="-1" eventType="touchUpInside" id="B70-2A-TxC"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3sR-gO-tqi">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3sR-gO-tqi">
                             <rect key="frame" x="50" y="0.0" width="274" height="40"/>
                             <fontDescription key="fontDescription" name="Inter-SemiBold" family="Inter" pointSize="14"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
